# swagger-output.json
@@ -1650,6 +1650,11 @@
             "name": "authorization",
             "in": "header",
             "type": "string"
+          },
+          {
+            "name": "source",
+            "in": "query",
+            "type": "string"
           }
         ],
         "responses": {
@@ -2565,6 +2570,23 @@
       }
     },
     "/api/admin/request-training/my-trainings": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/api/admin/request-training/my-requests": {
       "get": {
         "description": "",
         "parameters": [
